完成所有api，待优化
